xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__run_unary_minus.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"-1\")"
---
Ok(
    Item(
        Atomic(
            Integer(
                -1,
            ),
        ),
    ),
)
