xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__sequence_predicate_sequence_empty.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"(1, 2, 3)[()]\")"
---
Ok(
    Sequence(
        Sequence(
            RefCell {
                value: InnerSequence {
                    items: [],
                },
            },
        ),
    ),
)
