xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__simple_map_last.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"(4, 5, 6) ! (fn:last())\")"
---
Ok(
    Many(
        [
            Atomic(
                Integer(
                    Integer,
                    3,
                ),
            ),
            Atomic(
                Integer(
                    Integer,
                    3,
                ),
            ),
            Atomic(
                Integer(
                    Integer,
                    3,
                ),
            ),
        ],
    ),
)
