xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__simple_map_multiple_steps.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"(1, 2) ! (. + 1) ! (. + 2)\")"
---
Ok(
    Many(
        [
            Atomic(
                Integer(
                    4,
                ),
            ),
            Atomic(
                Integer(
                    5,
                ),
            ),
        ],
    ),
)
