xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__simple_map_multiple_steps2.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"(1, 2) ! (. + 1) ! (. + 2) ! (. + 3)\")"
---
Ok(
    Sequence(
        StackSequence(
            RefCell {
                value: StackInnerSequence {
                    items: [
                        Atomic(
                            Integer(
                                7,
                            ),
                        ),
                        Atomic(
                            Integer(
                                8,
                            ),
                        ),
                    ],
                },
            },
        ),
    ),
)
