xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__simple_map_position.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"(4, 5, 6) ! (fn:position())\")"
---
Ok(
    Sequence(
        Sequence(
            RefCell {
                value: InnerSequence {
                    items: [
                        Atomic(
                            Integer(
                                1,
                            ),
                        ),
                        Atomic(
                            Integer(
                                2,
                            ),
                        ),
                        Atomic(
                            Integer(
                                3,
                            ),
                        ),
                    ],
                },
            },
        ),
    ),
)
