xee-xpath/src/interpreter/snapshots/xee_xpath__interpreter__ir_interpret__tests__simple_map_single.snap
---
source: xee-xpath/src/interpreter/ir_interpret.rs
expression: "run(\"1 ! (. , 0)\")"
---
Ok(
    Many(
        [
            Atomic(
                Integer(
                    1,
                ),
            ),
            Atomic(
                Integer(
                    0,
                ),
            ),
        ],
    ),
)
